--- a/projectProposal.Rmd
+++ b/projectProposal.Rmd
@@ -46,8 +46,8 @@ We also created a github repository with each group member having collaborator a
 this means that it is less necessary to schedule physical meet ups which is difficult with everyone's schedules. 
 
 ## Question of Interest
-On average was the mean age of survivors on the titanic younger or older? 
-Did age affect survival chances on the titanic?
+On average was the mean age of survivors on the Titanic younger or older? 
+Did age affect survival chances on the Titanic?
 
 
 ## Data
